--- a/StemThickness.glyphsReporter/Contents/Info.plist
+++ b/StemThickness.glyphsReporter/Contents/Info.plist
@@ -16,16 +16,10 @@
 	<string>Stem Thickness</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
-	<key>CFBundleVersion</key>
-	<string>25</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3</string>
-	<key>UpdateFeedURL</key>
-	<string>https://raw.githubusercontent.com/RafalBuchner/StemThickness/master/StemThickness.glyphsReporter/Contents/Info.plist</string>
-	<key>productPageURL</key>
-	<string>https://github.com/RafalBuchner/StemThickness</string>
-	<key>productReleaseNotes</key>
-	<string>New shortcut ctrl-S (fix #24), localizations, code cleanup</string>
+	<string>1.4</string>
+	<key>CFBundleVersion</key>
+	<string>26</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright, Rafał Buchner, 2016</string>
 	<key>NSPrincipalClass</key>
@@ -34,5 +28,11 @@
 	<array>
 		<string>../MacOS/main.py</string>
 	</array>
+	<key>UpdateFeedURL</key>
+	<string>https://raw.githubusercontent.com/RafalBuchner/StemThickness/master/StemThickness.glyphsReporter/Contents/Info.plist</string>
+	<key>productPageURL</key>
+	<string>https://github.com/RafalBuchner/StemThickness</string>
+	<key>productReleaseNotes</key>
+	<string>update binary files for Glyphs3</string>
 </dict>
 </plist>
